--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "kio-ng2-benchmark",
   "version": "1.0.0",
   "description": "",
-  "main": "./release/module.js",
-  "module": "./release/module.js",
-  "typings": "./release/module.d.ts",
+  "main": "./release",
+  "module": "./release/benchmark.module.js",
+  "typings": "./release/benchmark.module.d.ts",
   "scripts": {
     "test": "ts-mocha ./src/**/*.spec.ts",
     "pretest": "npm run build",
@@ -14,11 +14,11 @@
     "postversion": "git push && git push --tags",
     "predoc": "rm -rf ./documentation",
     "doc": "compodoc -p ./tsconfig-doc.json -d ./documentation/",
-    "deploy:release": "rm -rf ./release; mv ./build release",
+    "deploy:test": "./scripts/copy_to_test.sh && ./scripts/merge_packages.js ./ ./test-app/node_modules/kio-ng2-benchmark",
     "transpile": "npm run ngModule:build",
     "ngModule:build": "./scripts/ngModule.sh build",
     "ngModule:copy": "echo ./scripts/ngModule.sh copy /Users/tEErohr/Documents/kio/angular2/digit/digit-dev/digit-bma",
-    "build": "npm run ngModule:build && npm run ngModule:copy",
+    "build": "npm run ngModule:build && npm run ngModule:copy && npm run deploy:test",
     "build:release": "NODE_ENV=production npm run build",
     "build:release:watch": "./scripts/watch.sh build:release"
   },
@@ -53,7 +53,9 @@
     "@angular/core": "^4.3.6",
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
+    "@types/cuid": "^1.3.0",
     "@types/showdown": "^1.7.1",
+    "cuid": "^1.3.8",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   }
